// Copyright 2021 CYBERCRYPT
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package storage;
option go_package = "encryption-service/storage";


service Encryptonize{
  // Stores an object
  rpc Store (StoreRequest) returns (StoreResponse){}

  // Retrieves an object
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse){}

  // Updates-Rewrites an object
  rpc Update (UpdateRequest) returns (UpdateResponse){}

  // Deletes an object
  rpc Delete (DeleteRequest) returns (DeleteResponse){}
}

message StoreRequest{
  bytes plaintext = 1;
  bytes associated_data = 2;
}

message StoreResponse{
  string object_id = 1;
}

message RetrieveRequest{
  string object_id = 1;
}

message RetrieveResponse{
  bytes plaintext = 1;
  bytes associated_data = 2;
}

message UpdateRequest{
  bytes plaintext = 1;
  bytes associated_data = 2;
  string object_id = 3;
}

message UpdateResponse{
}

message DeleteRequest{
  string object_id = 1;
}

message DeleteResponse{
}
